--- a/Dogovor/MainWindow.xaml
+++ b/Dogovor/MainWindow.xaml
@@ -4,30 +4,62 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ignore="http://www.galasoft.ch/ignore"
+        xmlns:local="clr-namespace:Dogovor.Model"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d ignore"
-        Height="300"
+        Height="331"
         Width="300"
-        Title="MVVM Light Application"
+        Title="Договор"
         DataContext="{Binding Main, Source={StaticResource Locator}}">
-    
+
     <Window.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Skins/MainSkin.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
+        <ObjectDataProvider x:Key="dataFromEnumCurrency" MethodName="GetValues"
+                        ObjectType="{x:Type sys:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="local:Currency"/>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+
+        <ObjectDataProvider x:Key="dataFromEnumStatus" MethodName="GetValues"
+                        ObjectType="{x:Type sys:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="local:Status"/>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+
+        <ObjectDataProvider x:Key="dataFromEnumPayment" MethodName="GetValues"
+                        ObjectType="{x:Type sys:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="local:Payment"/>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+
     </Window.Resources>
 
+
+
+
     <Grid x:Name="LayoutRoot">
-
-        <TextBlock FontSize="36"
-                   FontWeight="Bold"
-                   Foreground="Purple"
-                   Text="{Binding WelcomeTitle}"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   TextWrapping="Wrap" />
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Height="48" Margin="66,10,0,0" VerticalAlignment="Top" Width="152" Click="button_Click"/>
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="54*"/>
+            <ColumnDefinition Width="19*"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Grid.ColumnSpan="2">
+            <Button Command="{Binding Start}" x:Name="button" Content="Старт!" HorizontalAlignment="Left" Height="48" Margin="66,10,0,0" VerticalAlignment="Top" Width="152"/>
+            <TextBox Text="{Binding Contract.Num}"/>
+            <DatePicker SelectedDate="{Binding Contract.Date}"></DatePicker>
+            <ComboBox SelectedItem="{Binding Contract.Currency}" ItemsSource="{Binding Source={StaticResource dataFromEnumCurrency}}"></ComboBox>
+            <ComboBox SelectedItem="{Binding Contract.CustomerStatus}" ItemsSource="{Binding Source={StaticResource dataFromEnumStatus}}"></ComboBox>
+            <ComboBox SelectedItem="{Binding Contract.Payment}" ItemsSource="{Binding Source={StaticResource dataFromEnumPayment}}"></ComboBox>
+            <ComboBox SelectedItem="{Binding Contract.Signatory}" DisplayMemberPath="FIO" SelectedValuePath="Id" ItemsSource="{Binding Signatorys}"></ComboBox>
+            <TextBlock>Отчет</TextBlock>
+            <CheckBox IsChecked="{Binding Path=Contract.Report}"/>
+            <TextBlock>Этапы</TextBlock>
+            <CheckBox IsChecked="{Binding Path=Contract.Steps}"/>
+            <TextBlock>eRoom</TextBlock>
+            <CheckBox IsChecked="{Binding Path=Contract.Eroom}"/>
+            <TextBlock>Возмещаемые расходы</TextBlock>
+            <CheckBox IsChecked="{Binding Path=Contract.VozmRash}"/>
+        </StackPanel>
     </Grid>
 </Window>
